objects/Release_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>An Actual End Date is the date the Release Stage is
completed.</description>
        <inlineHelpText>An Actual End Date is the date the Release Stage is
completed.</inlineHelpText>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Baseline_End_Date__c</fullName>
        <description>Current Baseline End Date is the date the Release Stage can
complete by and still be considered on schedule</description>
        <inlineHelpText>Current Baseline End Date is the date the Release Stage can
complete by and still be considered on schedule</inlineHelpText>
        <label>Current Baseline End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Release_Stage__c</fullName>
        <label>Duplicate Release Stage</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Include checkbox indicates the Release Stage
should be included (checked) or excluded (unchecked) for the
Offering Release.</description>
        <inlineHelpText>The Include indicates the Release Stage
should be included (checked) or excluded (unchecked) for the
Offering Release.</inlineHelpText>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Baseline_End_Date__c</fullName>
        <label>Initial Baseline End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Iteration_Count__c</fullName>
        <label>Iteration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <label>Meeting Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offering_Release_ID__c</fullName>
        <label>Opportunity ID</label>
        <referenceTo>Offering_Release__c</referenceTo>
        <relationshipLabel>Stage</relationshipLabel>
        <relationshipName>Release_Stage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PAC_Decision__c</fullName>
        <label>BEP Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAC_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BEP Name</label>
        <referenceTo>ODP_PAC__c</referenceTo>
        <relationshipLabel>Stage</relationshipLabel>
        <relationshipName>Release_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predecessor_Release_Stage_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Predcessor Release Stage Id is the unique Idendifier
of the Release Stage.</description>
        <inlineHelpText>A Predcessor Release Stage Id is the unique Idendifier
of the Release Stage.</inlineHelpText>
        <label>Predecessor Stage ID</label>
        <referenceTo>Release_Stage__c</referenceTo>
        <relationshipLabel>Stage</relationshipLabel>
        <relationshipName>Release_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predecessor_Release_Stage_Name__c</fullName>
        <formula>Predecessor_Release_Stage_ID__r.Stage_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predecessor Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <formula>Offering_Release_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Contract_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage Contract Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process Stage ID</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Stage</relationshipLabel>
        <relationshipName>Release_Stage</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Stage_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tailoring_Justification__c</fullName>
        <label>Tailoring Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Stage_Name__c</columns>
        <columns>Release_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Stage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ODP_VR_TailoringJustification_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISCHANGED( Include__c),NOT(ISCHANGED(Tailoring_Justification__c )))</errorConditionFormula>
        <errorDisplayField>Tailoring_Justification__c</errorDisplayField>
        <errorMessage>When field INCLUDE changed, Please Provide Tailoring Justification</errorMessage>
    </validationRules>
</CustomObject>